--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
-secure
+NODE_ENV=development
+PORT=4000
+DATABASE=mongodb+srv://codecrew:<password>@cluster0.cvt5w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_PASSWORD=UbaidCodeCrew%402219
+SECRETKEY=supreme-master-ultra-instinct-codecrew-2219
+JWT_EXPIRE_IN=30d
+EMAIL_NAME=obedullahansari42@gmail.com
+EMAIL_PASSWORD=kxnyzfnnledefgha
+HOST=smtp.gmail.com
+EMAIL_PORT=587
+CLOUDINARY_CLOUD_NAME=ddcxguovf
+CLOUDINARY_API_KEY=855848212679145
+CLOUDINARY_API_SECRET=BpXkrtlCLUl09wyDTM_X-4LKMSU
+
+GEMINI_API_KEY=AIzaSyDwXgK1Jtzkrg550HkWT0hCuXaE8AnvrWg
